--- a/android-for-frontend/bottom-sheet/android/app/src/main/res/layout/fragment_bottomsheet.xml
+++ b/android-for-frontend/bottom-sheet/android/app/src/main/res/layout/fragment_bottomsheet.xml
@@ -3,15 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
-
+    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:height="400dp"
+        android:layout_height="400dp"
         android:gravity="center"
         android:text="Hello World"
         android:textSize="18sp"
@@ -20,6 +17,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.497" />
+        app:layout_constraintVertical_bias="0.5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
