테마 스타일 코드 수정

--- a/android-for-frontend/bottom-sheet/android/app/src/main/res/values/themes.xml
+++ b/android-for-frontend/bottom-sheet/android/app/src/main/res/values/themes.xml
@@ -15,7 +15,7 @@
         <item name="bottomSheetDialogTheme">@style/ModalBottomSheetDialog</item>
     </style>
 
-    <style name="ModalBottomSheetDialog" parent="ThemeOverlay.MaterialComponents.BottomSheetDialog">
+    <style name="ModalBottomSheetDialog" parent="ThemeOverlay.MaterialComponents.DayNight.BottomSheetDialog">
         <item name="bottomSheetStyle">@style/ModalBottomSheet</item>
     </style>
 
